_sass/pages/_home.scss
.partners_section {
    padding: 100px 150px;
    @media(max-width: 768px) {
        padding-left: 0;
        padding-right: 0;
    }
}

.partners {
    display: flex;
    justify-content: space-between;
    &:first-child {
        margin-bottom: 10px;
    }
    .partner {
        flex-basis: 100px; // Optimal size for partner's logo: 100px*50px
        margin: 0 10px;
    }
}

.marchandising_section {
    padding-bottom: 30px;
}

html .hero {
    background-image: url(../images/lausanne_overview.jpg);
    background-attachment: fixed !important;
    background-repeat: no-repeat;
    background-position-y: -200px;
    @media (min-width: 1651px) {
        background-size: cover;
    }
    @media (max-width: 1450px) {
        background-position-x: -200px;
    }
    @media (max-width: 1250px) {
        background-position-x: -400px;
    }
    @media (max-width: 1050px) {
        background-position-x: -600px;
    }
    @media (max-width: 850px) {
        background-position-x: -800px;
    }
    @media (max-width: 650px) {
        background-position-x: -1000px;
    }
    @media (max-width: 450px) {
        background-position-x: -1200px;
        background-position-y: -350px;
    }
    .container {
        padding: 305px 0 0 0;
        @media (max-width: 479px) {
            padding-top: 165px;
        }
    }
}

.the_claim {
    position: absolute;
    font-family: Montserrat, sans-serif;
    color: #0087cd;
    font-size: 81px;
    line-height: 90px;
    font-weight: 700;
    text-transform: uppercase;
    opacity: 0;
    -webkit-animation-duration: 2s;
    animation-duration: 2s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
    -webkit-animation-direction: alternate;
    animation-direction: alternate;
}

@media (max-width: 991px) {
    .the_claim {
        font-size: 90px;
        line-height: 100px;
    }
}

@media (max-width: 768px) {
    .the_claim {
        font-size: 30px;
        line-height: 35px;
        text-align: center;
        width: 100%;
    }
}

.about_the_yog_p {
    text-align: justify;
    hyphens: auto;
    a {
        color: #fff;
        text-decoration: underline;
        font-weight: bold;
    }
}

.h1_about_yog {
    font-family: Montserrat, sans-serif;
    text-transform: uppercase;
    font-weight: bold;
}

.newsletter_cta {
    background-image: url(../images/bkg_blue.png);
    h1 {
        color: #fff;
    }
    .newsletter_cta_btn {
        background-color: #ce0071;
    }
    .newsletter_cta_field {
        border: none;
    }
}

.cio-sponsors {
    padding-top: 80px;
    padding-bottom: 80px;
    text-align: center;
    .sponsors-list.first {
        margin-top: 0;
    }
    .sponsors-list {
        text-align: center;
        padding-left: 0;
    }
    .sponsors-list li {
        display: inline-block;
        vertical-align: middle;
        margin: 0 34px 30px;
        min-width: 140px;
    }
}

.parallax {
    perspective: 1px;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: auto;
}

.parallax__layer {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.parallax__layer--base {
    transform: translateZ(0);
}

.parallax__layer--back {
    transform: translateZ(-1px);
}
.newsletter{
    display: flex;
    flex-wrap: wrap;
    align-items:center;
    .newsletter-text{
        padding-right: 10px; 
        flex-basis: 50%;
        @media(max-width: 992px) {
            flex-basis: 100%;
            padding-right: 0px;
        }
    }
    .newsletter-form{
        padding-left: 10px;
        flex-basis: 50%;
        @media(max-width: 992px) {
            flex-basis: 100%;   
            padding-left: 0px;
        }
        .newsletter-form-adress{
            flex-basis: 75%;
            padding-right: 20px;
            @media(max-width: 992px) {
                flex-basis: 100%;   
                padding-right: 0px;
            }
        }
        .newsletter-form-button{
            flex-basis: 25%;
            @media(max-width: 992px) {
                flex-basis: 100%;   
            }
        }
        form{
            flex-basis: 100%;
            display: flex;
            flex-wrap: wrap;
        }
    }
}

